--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -38,6 +38,32 @@
                     <p class="mb-0">{{ tour.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ tour.price }}</p>
                     <p class="mt-3">{{ tour.description }}</p>
+                    <!-- Form to add tour to the shopping bag -->
+                    <form class="form" action="" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ tour.id }}" id="id_qty_{{ tour.id }}">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <a href="{% url 'all_tours' %}" class="btn mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+
                 </div>
 
             </div>
