--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -39,7 +39,7 @@
                     <p class="lead mb-0 text-left font-weight-bold">${{ tour.price }}</p>
                     <p class="mt-3">{{ tour.description }}</p>
                     <!-- Form to add tour to the shopping bag -->
-                    <form class="form" action="" method="POST">
+                    <form class="form" action="{% url 'add_to_bag' tour.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
