--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,8 +26,9 @@
             <div class="col">
                 {% if bag_items %}
                     <div class="table-responsive rounded">
-                        {{ bag_items }}
 
+                        <!-- Logic to display each part of bag items -->
+                        {% for item in bag_items %}
                         <!-- https://bootstrapious.com/p/bootstrap-shopping-cart -->
                         <div class="pb-5">
                             <div class="container">
@@ -61,50 +62,14 @@
                                                                  alt="" width="70" class="img-fluid rounded shadow-sm">
                                                             <div class="ml-3 d-inline-block align-middle">
                                                                 <h5 class="mb-0"><a href="#"
-                                                                                    class="text-dark d-inline-block align-middle">Timex
-                                                                    Unisex Originals</a></h5>
+                                                                                    class="text-dark d-inline-block align-middle">{{ item.tour.name }}</a></h5>
                                                             </div>
                                                         </div>
                                                     </th>
-                                                    <td class="border-0 align-middle"><strong>$79.00</strong></td>
-                                                    <td class="border-0 align-middle"><strong>3</strong></td>
+                                                    <td class="border-0 align-middle"><strong>£{{ item.tour.price }}</strong></td>
+                                                    <td class="border-0 align-middle"><strong>{{ item.quantity }}</strong></td>
                                                     <td class="border-0 align-middle"><a href="#" class="text-dark"><i
                                                             class="fa fa-trash"></i></a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">
-                                                        <div class="p-2">
-                                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-3_cexmhn.jpg"
-                                                                 alt="" width="70" class="img-fluid rounded shadow-sm">
-                                                            <div class="ml-3 d-inline-block align-middle">
-                                                                <h5 class="mb-0"><a href="#"
-                                                                                    class="text-dark d-inline-block">Lumix
-                                                                    camera lense</a></h5>
-                                                            </div>
-                                                        </div>
-                                                    </th>
-                                                    <td class="align-middle"><strong>$79.00</strong></td>
-                                                    <td class="align-middle"><strong>3</strong></td>
-                                                    <td class="align-middle"><a href="#" class="text-dark"><i
-                                                            class="fa fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">
-                                                        <div class="p-2">
-                                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-2_qxjis2.jpg"
-                                                                 alt="" width="70" class="img-fluid rounded shadow-sm">
-                                                            <div class="ml-3 d-inline-block align-middle">
-                                                                <h5 class="mb-0"><a href="#"
-                                                                                    class="text-dark d-inline-block">Gray
-                                                                    Nike running shoe</a></h5>
-                                                            </div>
-                                                        </div>
-                                                    <td class="align-middle"><strong>$79.00</strong></td>
-                                                    <td class="align-middle"><strong>3</strong></td>
-                                                    <td class="align-middle"><a href="#" class="text-dark"><i
-                                                            class="fa fa-trash"></i></a>
-                                                    </td>
                                                 </tr>
                                                 </tbody>
                                             </table>
@@ -112,36 +77,10 @@
                                         <!-- End -->
                                     </div>
                                 </div>
-
+                        {% endfor %}
                                 <div class="row py-5 p-4 bg-white rounded shadow-sm">
-                                    <div class="col-lg-6">
-                                        <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
-                                            Coupon code
-                                        </div>
-                                        <div class="p-4">
-                                            <p class="font-italic mb-4">If you have a coupon code, please enter it in
-                                                the box below</p>
-                                            <div class="input-group mb-4 border rounded-pill p-2">
-                                                <input type="text" placeholder="Apply coupon"
-                                                       aria-describedby="button-addon3" class="form-control border-0">
-                                                <div class="input-group-append border-0">
-                                                    <button id="button-addon3" type="button"
-                                                            class="btn btn-dark px-4 rounded-pill"><i
-                                                            class="fa fa-gift mr-2"></i>Apply coupon
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
-                                            Instructions for seller
-                                        </div>
-                                        <div class="p-4">
-                                            <p class="font-italic mb-4">If you have some information for the seller you
-                                                can leave them in the box below</p>
-                                            <textarea name="" cols="30" rows="2" class="form-control"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
+
+                                    <div class="col-12">
                                         <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
                                             Order summary
                                         </div>
@@ -162,7 +101,7 @@
                                                     <h5 class="font-weight-bold">$400.00</h5>
                                                 </li>
                                             </ul>
-                                            <a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Procceed to
+                                            <a href="#" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
                                                 checkout</a>
                                         </div>
                                     </div>
