--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -29,85 +29,123 @@
 
                         <!-- Logic to display each part of bag items -->
                         {% for item in bag_items %}
-                        <!-- https://bootstrapious.com/p/bootstrap-shopping-cart -->
-                        <div class="pb-5">
+                            <!-- https://bootstrapious.com/p/bootstrap-shopping-cart -->
+                            <div class="pb-5">
                             <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+                            <div class="row">
+                                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
-                                        <!-- Shopping cart table -->
-                                        <div class="table-responsive">
-                                            <table class="table">
-                                                <thead>
-                                                <tr>
-                                                    <th scope="col" class="border-0 bg-light">
-                                                        <div class="p-2 px-3 text-uppercase">Product</div>
-                                                    </th>
-                                                    <th scope="col" class="border-0 bg-light">
-                                                        <div class="py-2 text-uppercase">Price</div>
-                                                    </th>
-                                                    <th scope="col" class="border-0 bg-light">
-                                                        <div class="py-2 text-uppercase">Quantity</div>
-                                                    </th>
-                                                    <th scope="col" class="border-0 bg-light">
-                                                        <div class="py-2 text-uppercase">Remove</div>
-                                                    </th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <th scope="row" class="border-0">
-                                                        <div class="p-2">
-                                                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-1_zrifhn.jpg"
-                                                                 alt="" width="70" class="img-fluid rounded shadow-sm">
-                                                            <div class="ml-3 d-inline-block align-middle">
-                                                                <h5 class="mb-0"><a href="#"
-                                                                                    class="text-dark d-inline-block align-middle">{{ item.tour.name }}</a></h5>
+                                    <!-- Shopping cart table -->
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="p-2 px-3 text-uppercase">Product</div>
+                                                </th>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="py-2 text-uppercase">Price</div>
+                                                </th>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="py-2 text-uppercase">Quantity</div>
+                                                </th>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="py-2 text-uppercase">Remove</div>
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row" class="border-0">
+                                                    <div class="p-2">
+                                                        <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-1_zrifhn.jpg"
+                                                             alt="" width="70" class="img-fluid rounded shadow-sm">
+                                                        <div class="ml-3 d-inline-block align-middle">
+                                                            <h5 class="mb-0"><a href="#"
+                                                                                class="text-dark d-inline-block align-middle">{{ item.tour.name }}</a>
+                                                            </h5>
+                                                        </div>
+                                                    </div>
+                                                </th>
+                                                <td class="border-0 align-middle">
+                                                    <strong>£{{ item.tour.price }}</strong></td>
+                                                <td class="border-0 align-middle">
+                                                    <form class="form update-form" action="" method="POST">
+                                                        {% csrf_token %}
+                                                        <div class="form-group">
+                                                            <div class="input-group">
+                                                                <div class="input-group-prepend">
+                                                                    <button class="decrement-qty btn btn-sm rounded-0"
+                                                                            data-item_id="{{ item.item_id }}"
+                                                                            id="decrement-qty_{{ item.item_id }}">
+                                                            <span>
+                                                                <i class="fas fa-minus fa-sm"></i>
+                                                            </span>
+                                                                    </button>
+                                                                </div>
+                                                                <input class="form-control form-control-sm qty_input"
+                                                                       type="number"
+                                                                       name="quantity" value="{{ item.quantity }}"
+                                                                       min="1" max="99"
+                                                                       data-item_id="{{ item.item_id }}"
+                                                                       id="id_qty_{{ item.item_id }}">
+                                                                <div class="input-group-append">
+                                                                    <button class="increment-qty btn btn-sm rounded-0"
+                                                                            data-item_id="{{ item.item_id }}"
+                                                                            id="increment-qty_{{ item.item_id }}">
+                                                            <span>
+                                                                <i class="fas fa-plus fa-sm"></i>
+                                                            </span>
+                                                                    </button>
+                                                                </div>
+
                                                             </div>
                                                         </div>
-                                                    </th>
-                                                    <td class="border-0 align-middle"><strong>£{{ item.tour.price }}</strong></td>
-                                                    <td class="border-0 align-middle"><strong>{{ item.quantity }}</strong></td>
-                                                    <td class="border-0 align-middle"><a href="#" class="text-dark"><i
-                                                            class="fa fa-trash"></i></a></td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                        <!-- End -->
-                                    </div>
-                                </div>
-                        {% endfor %}
-                                <div class="row py-5 p-4 bg-white rounded shadow-sm">
 
-                                    <div class="col-12">
-                                        <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
-                                            Order summary
-                                        </div>
-                                        <div class="p-4">
-                                            <p class="font-italic mb-4">Shipping and additional costs are calculated
-                                                based on values you have entered.</p>
-                                            <ul class="list-unstyled mb-4">
-                                                <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                        class="text-muted">Order
-                                                    Subtotal </strong><strong>$390.00</strong></li>
-                                                <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                        class="text-muted">Shipping and
-                                                    handling</strong><strong>$10.00</strong></li>
-                                                <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                        class="text-muted">Tax</strong><strong>$0.00</strong></li>
-                                                <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                        class="text-muted">Total</strong>
-                                                    <h5 class="font-weight-bold">$400.00</h5>
-                                                </li>
-                                            </ul>
-                                            <a href="#" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
-                                                checkout</a>
-                                        </div>
-                                    </div>
-                                </div>
+                                                    </form>
 
+
+                                                </td>
+                                                <td class="border-0 align-middle"><a href="#" class="text-dark"><i
+                                                        class="fa fa-trash"></i></a></td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- End -->
+                                </div>
                             </div>
+                        {% endfor %}
+                        <div class="row py-5 p-4 bg-white rounded shadow-sm">
+
+                            <div class="col-12">
+                                <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">
+                                    Order summary
+                                </div>
+                                <div class="p-4">
+                                    <p class="font-italic mb-4">Shipping and additional costs are calculated
+                                        based on values you have entered.</p>
+                                    <ul class="list-unstyled mb-4">
+                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
+                                                class="text-muted">Order
+                                            Subtotal </strong><strong>$390.00</strong></li>
+                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
+                                                class="text-muted">Shipping and
+                                            handling</strong><strong>$10.00</strong></li>
+                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
+                                                class="text-muted">Tax</strong><strong>$0.00</strong></li>
+                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
+                                                class="text-muted">Total</strong>
+                                            <h5 class="font-weight-bold">$400.00</h5>
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
+                                        checkout</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        </div>
                         </div>
                     </div>
 
@@ -122,7 +160,6 @@
                     </a>
                 {% endif %}
         </div>
-    </div>
     </div>
 
 {% endblock %}
