--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -46,7 +46,22 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn rounded-0" data-item_id="{{ tour.id }}" id="decrement-qty_{{ tour.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                         <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ tour.id }}" id="id_qty_{{ tour.id }}">
+
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn rounded-0" data-item_id="{{ tour.id }}" id="increment-qty_{{ tour.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -71,4 +86,9 @@
     </div>
     <
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super}}
+    {%  include "tours/includes/quantity_input_script.html" %}
 {% endblock %}
