--- a/tours/templates/tours/includes/quantity_input_script.html
+++ b/tours/templates/tours/includes/quantity_input_script.html
@@ -1,10 +1,21 @@
 <script type="text/javascript">
+    // Disable +/- buttons outside 1-99 range
+    function handleEnableDisable(itemId) {
+        let currentValue = parseInt($(`#id_qty_${itemId}`).val());
+        let minusDisabled = currentValue < 2;
+        let plusDisabled = currentValue > 98;
+        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+    }
+
     // Increase quantity of tours by 1
     $('.increment-qty').click(function(e) {
         e.preventDefault();
         let closetInput = $(this).closest('.input-group').find('.qty_input')[0];
         let currentValue = parseInt($(closetInput).val());
         $(closetInput).val(currentValue + 1);
+        let itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
     });
 
     // Decrease quantity of tours by 1
@@ -13,6 +24,8 @@
         let closetInput = $(this).closest('.input-group').find('.qty_input')[0];
         let currentValue = parseInt($(closetInput).val());
         $(closetInput).val(currentValue - 1);
+        let itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
     });
 
 </script>
