--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load bag_tools %}
+
 
 {% block page_header %}
     <div class="container header-container">
@@ -113,29 +113,11 @@
                                     Order summary
                                 </div>
                                 <div class="p-4">
-                                    <p class="font-italic mb-4">Shipping and additional costs are calculated
-                                        based on values you have entered.</p>
-                                    <ul class="list-unstyled mb-4">
-                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                class="text-muted">Order
-                                            Subtotal </strong><strong>$390.00</strong></li>
-                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                class="text-muted">Shipping and
-                                            handling</strong><strong>$10.00</strong></li>
-                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                class="text-muted">Tax</strong><strong>$0.00</strong></li>
-                                        <li class="d-flex justify-content-between py-3 border-bottom"><strong
-                                                class="text-muted">Total</strong>
-                                            <h5 class="font-weight-bold">$400.00</h5>
-                                        </li>
-                                    </ul>
-                                    <a href="#" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
+
+                                    <a href="{% url 'checkout' %}" class="btn btn-dark rounded-pill py-2 btn-block w-25">Proceed to
                                         checkout</a>
                                 </div>
                             </div>
-                        </div>
-
-                        </div>
                         </div>
                     </div>
 
