--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,17 +15,18 @@
 {% endblock %}
 
 {% block content %}
+     {% include "navbar.html" %}
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
+                <h2 class="logo-font mb-4 text-center">Checkout</h2>
                 <hr>
             </div>
         </div>
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Please fill out the form below to book on your tour!</p>
+            <div class="col-12">
+                <p class="text-muted text-center">Please fill out the form below to book on your tour!</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
@@ -80,7 +81,7 @@
 							<span class="icon">
 								<i class="fas fa-exclamation-circle"></i>
 							</span>
-							<span>Your card will be charged <strong>${{ order_total|floatformat:2 }}</strong></span>
+							<span>Your card will be charged <strong>£{{ order_total|floatformat:2 }}</strong></span>
 						</p>
 					</div>
                 </form>
